<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/register_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="376dp"
                android:layout_height="78dp"
                android:layout_below="@id/register_photo"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="55dp"
                android:layout_marginRight="40dp"
                android:hint="@string/email_input"
                app:boxStrokeErrorColor="@android:color/holo_red_light"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconMode="clear_text"
                android:layout_centerHorizontal="true"
                app:helperText="Enter your Email Id here"
                app:startIconDrawable="@drawable/round_mail_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="376dp"
                android:layout_height="76dp"
                android:layout_below="@id/register_email_box"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:hint="@string/password_input"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeErrorColor="@android:color/holo_red_light"
                app:endIconMode="password_toggle"
                android:layout_centerHorizontal="true"
                app:helperText="Enter your Password here"
                app:startIconDrawable="@drawable/round_vpn_key_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="230dp"
                android:layout_height="49dp"
                android:layout_below="@id/register_password_box"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="85dp"
                android:layout_marginRight="90dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttons"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/already_have_account_link"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/register_button"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:text="@string/already_registered_click_here"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phone_register_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/already_have_account_link"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/round_local_phone_24"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:text="@string/or_login_with_mobile_no"
                android:textAllCaps="false"
                android:textColor="#AD000000"
                android:textSize="14sp" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>