<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ChatActivity">

    <include
        android:id="@+id/chat_toolbar"
        layout="@layout/app_bar_layout"/>
    
    <ProgressBar
        android:id="@id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressTint="#D50000"
        android:secondaryProgressTint="#304FFE"
        android:visibility="invisible"
        android:layout_below="@id/chat_toolbar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/private_messages_list_of_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/chat_toolbar"
            android:layout_above="@id/myLinearLayout">

        </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/myLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_gravity="bottom"
            android:background="@drawable/buttons_white"
            android:orientation="horizontal">
                <EditText
                    android:id="@+id/input_private_chat_message"
                    android:layout_width="280dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="-10dp"
                    android:fontFamily="@font/nunito"
                    android:background="@android:color/transparent"
                    android:hint="@string/type_here"
                    android:maxLines="5"
                    android:padding="17dp">
                </EditText>
                <ImageButton
                    android:id="@+id/send_files_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_attach_file_black_24dp"
                    android:contentDescription="@string/attach_files">

                </ImageButton>
        </LinearLayout>


        <ImageButton
            android:id="@+id/send_message_button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/round_send_black_24"
            android:contentDescription="@string/send_button" />

    </LinearLayout>

</RelativeLayout>